FIxed the msgbox too low issue

--- a/src/sass/slides/controls/patterns/_messagebox.scss
+++ b/src/sass/slides/controls/patterns/_messagebox.scss
@@ -12,6 +12,7 @@
     position:absolute;
     top:1em;
     left:1em;
+    z-index:999;
 }
 
 .boxclose{
